spacing and logo fixes

--- a/src/styles/HeaderWithCarousel.scss
+++ b/src/styles/HeaderWithCarousel.scss
@@ -61,7 +61,7 @@
             display: flex;
             flex-direction: column;
             gap: 1em;
-            margin-top: 1em;
+            margin: 1em 0;
         }
 
         @media screen and (min-width: 1024px) {
