--- a/src/styles/ProjectCardSmall.scss
+++ b/src/styles/ProjectCardSmall.scss
@@ -1,8 +1,6 @@
     .project-container-small {
-        // width: var(--width-container);
         max-width: var(--max-width-container);
-        margin: auto;
-        margin-top: 1em;
+        margin: 2em auto 0 auto;
         display: flex;
         height: auto;
         background-color: #fff;
